@@ -1,3 +1,7 @@
+2012-11-21  Araki Ken  <arakiken@users.sf.net>
+
+	* ml_vt100_parser.c: Minor fixes.
+
 2012-11-20  Araki Ken  <arakiken@users.sf.net>
 
 	* MLTermPty.c: "use_ansi_colors" option is added to set_config().
